@@ -1,3 +1,7 @@
+2009-07-19  Chong Yidong  <cyd@stupidchicken.com>
+
+	* files.el (hack-local-variables-filter): Rewrite.
+
 2009-07-19  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/verilog-mode.el (verilog-error-regexp-add-xemacs):
